# Elf-Stuffer

./: .gitignore  README.md  chrimbus.enc  elfformat.py  main.py  pyproject.toml
.github/workflows/: poetry.yml
example/: a.out  printmain.c
